sandbox/app/assets/tailwind/application.css
/* ... */
@container media-gallery-desktop (max-width: calc(108px * 3 + 104px + 0.5rem)) {
  .media-gallery-desktop:has(.swiper-slide:nth-child(3))>.media-gallery-desktop__wrapper {
    --arrows-display: flex;
  }
}

@container media-gallery-desktop (max-width: calc(108px * 2 + 104px + 0.5rem)) {
  .media-gallery-desktop:has(.swiper-slide:nth-child(2))>.media-gallery-desktop__wrapper {
    --arrows-display: flex;
  }
}

.media-gallery-desktop-arrow {
  display: var(--arrows-display, flex);
}

#floating-cart-icon {
  bottom: 1rem;
  right: 1rem;
  z-index: 9998;
}

.custom-height {
  height: var(--mobile-height, var(--height));
}

@media (min-width: 501px) {
  .custom-height {
    height: var(--desktop-height, var(--height));
  }
}

@media (min-width: 768px) {
  .desktop-max-width {
    max-width: var(--desktop-max-width);
  }
}

.checkout-container {
  --main-container-width: 650px;
  --summary-container-width: 455px;
  grid-template-rows: min-content auto;
  grid-template-columns: 1fr;
  grid-template-areas:
    "summary"
    "main";
}

@media (min-width: 768px) {
  .checkout-container {
    grid-template-rows: 1fr;
    grid-template-columns:
      minmax(0, 1fr) minmax(0, var(--main-container-width)) minmax(0, var(--summary-container-width)) minmax(0, 1fr);
    grid-template-areas: "main main summary summary";
  }
}

#checkout-main #flashes {
  --flashes-container-width: var(--main-container-width) + var(--summary-container-width);
  grid-template-columns:
    minmax(0, 1fr) minmax(0, calc(var(--flashes-container-width))) minmax(0, 1fr);
  grid-template-areas: ". flash .";
  display: grid;
  left: 0;
}

#checkout-main #flashes>div {
  grid-area: flash;
}

#checkout-main {
  background: var(--background);
  grid-area: main;
}

#checkout-summary {
  background: var(--accent);
  grid-area: summary;
}

#checkout-main>.checkout-main-container,
#checkout-footer {
  max-width: var(--main-container-width);
  width: 100%;
  inline-size: 100%;
  padding: 0px 21px;
}

#checkout-footer {
  padding: 16px 21px;
  padding-top: 0;
}

#checkout-summary>.checkout-summary-container {
  max-width: var(--summary-container-width);
  width: 100%;
  inline-size: 100%;
  padding: 21px;
}

@media (min-width: 768px) {
  #checkout-main>.checkout-main-container {
    padding: 42px;
    flex-grow: 1;
  }

  #checkout-footer {
    padding: 16px 42px;
    padding-top: 0;
  }

  #checkout-summary>.checkout-summary-container {
    padding: 42px;
    position: sticky;
    top: 0;
  }
}

.size-chart-table table {
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.size-chart-table tr th {
  border: 1px solid var(--border-default-color);
  padding: 0.25rem;
  text-align: center;
  font-weight: 600;
}

.size-chart-table tr td {
  border: 1px solid var(--border-default-color);
  padding: 0.25rem;
  text-align: center;
}

.dropdown-button:focus svg {
  rotate: 180deg;
  transition: 200ms;
}

/* PDP properties */
.product-property,
.product-metafield {
  ul {
    list-style: disc;
    padding-left: 2rem;
  }

  ol {
    list-style: decimal;
    padding-left: 2rem;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  a {
    font-weight: 600;
    line-height: 1.375;
    letter-spacing: 0.07rem;
    color: var(--text);
    border-bottom: 1px solid transparent;

    &:hover {
      border-bottom-color: var(--text);
    }

    &:focus-visible {
      outline-offset: 0.25rem;
      padding: 0 0.25rem;
      border-radius: 0.25rem;
    }
  }
}

.product-description-truncated {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: var(--read-more-line-clamp, 3);
}

/* Desktop: show full description, hide "Read more" button */
@media (min-width: 768px) {
  .product-description-truncated {
    overflow: visible;
    display: block;
    -webkit-line-clamp: unset;
  }

  [data-controller="read-more"]>button[data-action="read-more#toggle"] {
    display: none !important;
  }
}

.header--nav-item .menu-item:focus:not(.header--mega-nav-container *) {
  outline: none;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-left: 0rem;
  margin-right: 0rem;
}

.post-details-content {

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply my-4 text-xl font-medium;
  }

  li {

    b,
    strong {
      @apply font-semibold;
    }
  }

  pre {
    @apply mb-4;
  }

  p {
    @apply my-4;
  }

  p:first-child {
    margin-top: 0;
  }

  img {
    width: 100%;
  }

  hr {
    @apply mt-4 mb-6;
  }

  .attachment {
    @apply my-6;
  }

  .attachment__caption {
    @apply italic text-center text-neutral-600;
  }
}

.prose:not(:has(h1)) {
  h2:first-of-type {
    margin-top: 0;
  }
}

.pagination {
  .pagination-link {
    border: 1.5px solid transparent;
  }

  .pagination-link:hover {
    border-bottom: 1.5px solid var(--accent);
  }

  .pagination-link:active,
  .pagination-link--active {
    border-bottom: 1.5px solid var(--text);
  }

  .pagination-link--disabled {
    color: var(--neutral);
    pointer-events: none;
  }
}

label:has(.input-address-default:disabled) {
  color: var(--neutral);
}

.input-address-default:disabled {
  @apply cursor-not-allowed;

  border-color: var(--neutral);
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='#999999' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");

  &:hover {
    border-color: var(--neutral);
  }
}

body:has(.currency-and-locale-modal:not(.hidden)) .page-contents {
  position: relative;
  z-index: 1;
}

.video-embed-container {
  iframe {
    width: 100%;
    height: auto;
    aspect-ratio: 1.77;
  }
}

/* Pagy pagination styles */
.pagy.series-nav {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.25rem;
  margin-top: 4rem;
}
/* ... */

